--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="React Boilerplate">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=6, viewport-fit=cover">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   </head>
   <body>
     <div id="root"></div>
